Adjust org logo styles to avoid distorting non-round logos but still keep the full size when an image is missing.

--- a/assets/sass/components/MemberTabs/MemberOrgs/_member-orgs.scss
+++ b/assets/sass/components/MemberTabs/MemberOrgs/_member-orgs.scss
@@ -19,8 +19,8 @@
 
     .tile__logo {
         margin-top: 1rem;
-        max-height: 100px;
-        max-width: 100px;
+        height: 80px;
+        max-width: 80px;
         border: 1px solid $blue;
         border-radius: 50px;
     }
